[Kemal] Database update
